test/err/syntax.nl
in x: 8;
out y: 8;
x = x y z;
